--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "gulp-sass": "^2.0.1"
   }
 }
